# ConsoleTodos

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  runUnitTests.sh
consoletodos/: CMakeLists.txt
consoletodos.command/: CMakeLists.txt
consoletodos.command/src/: command.c  command.h  commandAdd.c  commandAdd.h  commandHelp.c  commandHelp.h  commandLoad.c  commandLoad.h  commandRemove.c  commandRemove.h  commandSave.c  commandSave.h  commandShow.c  commandShow.h  commandUpdate.c  commandUpdate.h  commandUtil.c  commandUtil.h
consoletodos.command/test/: CMakeLists.txt  commandTest.c  main.c
consoletodos.model/: CMakeLists.txt
consoletodos.model/src/: command.c  command.h  commandAdd.c  commandAdd.h  commandHelp.c  commandHelp.h  commandShow.c  commandShow.h  todo.c  todo.h  todoList.c  todoList.h  typeUtil.c  typeUtil.h
consoletodos.model/test/: CMakeLists.txt  commandTest.c  commandTest.h  main.c  main.h  todoListTest.c  todoListTest.h  todoTest.c  todoTest.h  typeUtilTest.c  typeUtilTest.h
consoletodos.storage/: CMakeLists.txt
consoletodos.storage/src/: configStorage.c  configStorage.h  errStorage.c  errStorage.h  todoStorage.c  todoStorage.h
consoletodos.storage/test/: CMakeLists.txt  main.c  todoStorageTest.c  todoStorageTest.h
consoletodos/src/: main.c  main.h  shellUtil.c  shellUtil.h  todoIO.c  todoIO.h
